@@ -15,7 +15,7 @@
   | Author: Georg Richter <georg@php.net>                                |
   +----------------------------------------------------------------------+
 
-  $Id: mysqli.c,v 1.43.2.17 2005/06/27 18:22:00 tony2001 Exp $ 
+  $Id: mysqli.c,v 1.43.2.18 2005/09/13 09:21:36 tony2001 Exp $ 
 */
 
 #ifdef HAVE_CONFIG_H
@@ -130,9 +130,11 @@ static void mysqli_objects_free_storage(zend_object *object TSRMLS_DC)
 static void mysqli_objects_destroy_object(void *object, zend_object_handle handle TSRMLS_DC)
 {
 	mysqli_object 	*intern = (mysqli_object *)object;
-	MYSQLI_RESOURCE	*my_res = (MYSQLI_RESOURCE *)intern->ptr;
+	MYSQLI_RESOURCE	*my_res;
 
 	zend_objects_destroy_object(object, handle TSRMLS_CC);
+	
+	my_res = (MYSQLI_RESOURCE *)intern->ptr;
 
 	/* link object */
 	if (instanceof_function(intern->zo.ce, mysqli_link_class_entry TSRMLS_CC)) {
